# ironhtml

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: changelog.yaml  ci.yml  docs.yml
crates/html-attributes/: Cargo.toml
crates/html-attributes/src/: lib.rs
crates/html-bootstrap/: Cargo.toml
crates/html-bootstrap/examples/: bootstrap_docs.rs  landing_page.rs  wallet_dashboard.rs
crates/html-bootstrap/src/: accordion.rs  alerts.rs  badge.rs  breadcrumb.rs  buttons.rs  cards.rs  carousel.rs  close_button.rs  collapse.rs  dropdown.rs  grid.rs  lib.rs  list_group.rs  modal.rs  navbar.rs  offcanvas.rs  pagination.rs  placeholder.rs  progress.rs  spinner.rs  toast.rs  tooltip.rs  types.rs
crates/html-builder/: Cargo.toml
crates/html-builder/examples/: parse5_samples.rs
crates/html-builder/src/: lib.rs  typed.rs
crates/html-elements/: Cargo.toml
crates/html-elements/src/: lib.rs
crates/html-parser/src/: tree_builder.rs
crates/ironhtml/: Cargo.toml
crates/ironhtml-attributes/: Cargo.toml
crates/ironhtml-attributes/src/: lib.rs
crates/ironhtml-bootstrap/: Cargo.toml
crates/ironhtml-bootstrap/examples/: bootstrap_docs.rs  landing_page.rs  wallet_dashboard.rs
crates/ironhtml-bootstrap/src/: accordion.rs  alerts.rs  badge.rs  breadcrumb.rs  buttons.rs  cards.rs  carousel.rs  close_button.rs  collapse.rs  dropdown.rs  grid.rs  lib.rs  list_group.rs  modal.rs  navbar.rs  offcanvas.rs  pagination.rs  placeholder.rs  progress.rs  spinner.rs  toast.rs  tooltip.rs  types.rs
crates/ironhtml-elements/: Cargo.toml
crates/ironhtml-elements/src/: lib.rs
crates/ironhtml-macro/: Cargo.toml
crates/ironhtml-macro/src/: lib.rs
crates/ironhtml-parser/: Cargo.toml
crates/ironhtml-parser/src/: dom.rs  entities.rs  lib.rs  tokenizer.rs  tree_builder.rs  validator.rs
crates/ironhtml-tailwind/: Cargo.toml  README.md
crates/ironhtml-tailwind/examples/: tailwind_demo.rs  tailwind_macro.rs
crates/ironhtml-tailwind/src/: backgrounds.rs  borders.rs  effects.rs  flexbox.rs  grid.rs  layout.rs  lib.rs  sizing.rs  spacing.rs  typography.rs
crates/ironhtml/benches/: render.rs
crates/ironhtml/examples/: parse5_samples.rs
crates/ironhtml/src/: lib.rs  typed.rs
crates/ironhtml/tests/: macro_tests.rs
tests/parse5/: package-lock.json  package.json  random-tests.js  test.js
