[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LeakIX/html-builder"

[workspace.dependencies]
html-elements = { path = "crates/html-elements" }
html-attributes = { path = "crates/html-attributes" }
html-builder = { path = "crates/html-builder" }
html-macro = { path = "crates/html-macro" }
html-bootstrap = { path = "crates/html-bootstrap" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
