[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LeakIX/ironhtml"

[workspace.dependencies]
ironhtml-elements = { path = "crates/ironhtml-elements" }
ironhtml-attributes = { path = "crates/ironhtml-attributes" }
ironhtml = { path = "crates/ironhtml" }
ironhtml-macro = { path = "crates/ironhtml-macro" }
ironhtml-bootstrap = { path = "crates/ironhtml-bootstrap" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
