[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.81.0"
repository = "https://github.com/LeakIX/ironhtml"
readme = "README.md"

[workspace.dependencies]
ironhtml-elements = { version = "1", path = "crates/ironhtml-elements" }
ironhtml-attributes = { version = "1", path = "crates/ironhtml-attributes" }
ironhtml = { version = "1", path = "crates/ironhtml" }
ironhtml-macro = { version = "1", path = "crates/ironhtml-macro" }
ironhtml-bootstrap = { version = "1", path = "crates/ironhtml-bootstrap" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
