[package]
name = "html-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe Bootstrap 5.3 components for html-builder"
keywords = ["html", "bootstrap", "components"]
categories = ["web-programming"]

[dependencies]
html-builder.workspace = true
html-elements.workspace = true
html-macro.workspace = true

[features]
default = ["v5"]
v5 = []
