[package]
name = "html-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal, zero-dependency HTML builder for Rust"
keywords = ["html", "builder", "no-std", "zero-dependency"]
categories = ["web-programming", "no-std"]

[dependencies]
html-elements.workspace = true
html-attributes.workspace = true

[features]
default = ["typed"]
typed = []
std = []
