[package]
name = "ironhtml-attributes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Type-safe HTML5 attributes following the WHATWG Living Standard"
keywords = ["html", "html5", "attributes", "type-safe", "no-std"]
categories = ["web-programming", "no-std"]

[lints]
workspace = true

[dependencies]
# No dependencies - that's the point!
