[package]
name = "ironhtml-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Procedural macro for type-safe HTML construction"
keywords = ["html", "macro", "proc-macro", "type-safe"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
