[package]
name = "ironhtml-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML5 parser following the WHATWG Living Standard"
keywords = ["html", "html5", "parser", "dom", "no-std"]
categories = ["web-programming", "parser-implementations", "no-std"]

[lints]
workspace = true

[dependencies]
ironhtml-elements.workspace = true

[features]
default = []
std = []
