[package]
name = "ironhtml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal, zero-dependency HTML builder for Rust"
keywords = ["html", "builder", "no-std", "zero-dependency"]
categories = ["web-programming", "no-std"]

[lints]
workspace = true

[dependencies]
ironhtml-elements.workspace = true
ironhtml-attributes.workspace = true
ironhtml-macro = { workspace = true, optional = true }

[features]
default = ["typed"]
typed = []
std = []
macros = ["ironhtml-macro"]
